tests/neg-macros/i7013c.scala
import quoted._

def foo()(using QuoteContext) = {
  type C
  Type[C] // error
}
